fixed the jumpy bug when the sidebar is opened

--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,7 @@ body.dark-mode {
     margin-top: 0 !important;
     width: calc(100% - 21%);
     max-width: 1200px; /* Set maximum width */
+    min-width: 30%;
     min-height: calc(100vh - 70px); /* Adjusted to keep footer at bottom */
     display: flex;
     flex-direction: column;
@@ -506,7 +507,6 @@ body.dark-mode {
 /* Responsive Styles */
 @media (max-width: 992px) {
     main {
-        margin: 0 auto;
         padding: 0 5%;
     }
 
@@ -612,13 +612,21 @@ body.dark-mode {
     }
 
     .container {
-        padding: 10px;
+      
         align-items: center; /* Center the individual cards */
     }
 
     .opportunity-card {
         width: 100%; /* Adjust width for extra small screens */
     }
+    .filters-container{
+        justify-content: space-between;
+    }
+
+    .col1{
+        margin-right: 0;
+    }
+
 }
 
 @media (min-width: 992px) {
@@ -724,3 +732,9 @@ nav button span {
         display: block;
     }
 }
+
+/* @media (min-width: 993px) {
+   .sidebar{
+    min-width: 400px;
+   }
+} */
